Prevent line breaks in .details th elements
This was causing "Muncie Events Link" from having line breaks between
each word in some cases, like when there were many tags maximizing the
width of the right column of the event details table.

--- a/webroot/css/events.less
+++ b/webroot/css/events.less
@@ -203,6 +203,7 @@ ul.event_accordion {
             font-weight: bold;
             padding-right: 5px;
             vertical-align: top;
+            white-space: nowrap;
         }
     }
     .images {
